--- a/package.json
+++ b/package.json
@@ -5,21 +5,30 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node index.js",
-    "test": "node test.js",
-    "start": "node index.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "export": "next export",
+    "test": "node test.js"
   },
   "keywords": [
-    "gemini"
+    "gemini",
+    "nextjs",
+    "openai",
+    "proxy"
   ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "next": "latest",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "openai": "^4.28.0",
-    "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "axios": "^1.6.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/cors": "^2.8.17"
+  }
 } 
