--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "gemini-proxy-fc",
+  "name": "gemini-proxy",
   "version": "1.0.0",
   "description": "阿里云函数计算的 Gemini API 代理，兼容 OpenAI 客户端调用格式",
   "main": "index.mjs",
   "type": "module",
   "scripts": {
-    "test": "node test.js",
     "start": "node index.mjs"
   },
   "keywords": [
@@ -22,6 +21,6 @@
     "openai": "^4.63.0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   }
 } 
